database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: "mysql-service"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        # Argumentos para otimizar o motor InnoDB
        args:
          - "--innodb_buffer_pool_size=1G" 
          - "--innodb_log_file_size=256M"
          - "--max_connections=200"
        ports:
        - containerPort: 3306
        resources:
          # 'requests' garante o recurso, 'limits' impede que o container consuma tudo do nó
          requests:
            cpu: "500m"
            memory: "1.5Gi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init-script
        configMap:
          name: mysql-init-script
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      # Se o seu provedor suportar, use um storageClassName de alta performance (ex: ssd, gp3)
      resources:
        requests:
          storage: 10Gi
