manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dana-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dana-main
  template:
    metadata:
      labels:
        app: dana-main
    spec:
      containers:
      - name: dana-main
        image: my.private-registry.lan:5000/dana-main:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dana-main-service
spec:
  type: NodePort
  selector:
    app: dana-main
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
