k6-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-creator-access-policy
spec:
  podSelector:
    matchLabels:
      app: pod-creator
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dana-main
    - podSelector:
        matchLabels:
          app: k6-load-tester
    ports:
    - protocol: TCP
      port: 5001
